# Cosmic-IDE

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  build.gradle  build.gradle.kts  git.sh  gradle.properties  gradlew  pickerly-stack.txt  settings.gradle  settings.gradle.kts
.fleet/: run.json  settings.json
.github/: dependabot.yml
TreeView/: build.gradle.kts
android-compiler/: build.gradle  build.gradle.kts
android-stubs/: build.gradle
app/: .gitignore  build.gradle  build.gradle.kts  dictionary.txt  google-services.json  keystore.keystore  proguard-rules.pro
bardapi/: build.gradle.kts
build-tools/: build.gradle.kts
buildSrc/: build.gradle  build.gradle.kts
code-analyzer/: build.gradle
common/: build.gradle  build.gradle.kts
datadir/: build.gradle.kts
dependency-resolver/: README.md  build.gradle.kts
eclipse-jdt/: build.gradle  build.gradle.kts
feature/aliuhook/src/main/cpp/: CMakeLists.txt  aliuhook.cpp  aliuhook.h  elf_img.cpp  elf_img.h  hidden_api.cpp  hidden_api.h  invoke_constructor.cpp  invoke_constructor.h  log.h  profile_saver.cpp  profile_saver.h
feature/aliuhook/src/main/cpp/xz/linux/include/linux/: xz.h
feature/aliuhook/src/main/cpp/xz/linux/include/linux/decompress/: unxz.h
feature/aliuhook/src/main/cpp/xz/linux/lib/xz/: xz_crc32.c  xz_crc64.c  xz_dec_bcj.c  xz_dec_lzma2.c  xz_dec_stream.c  xz_dec_test.c  xz_lzma2.h  xz_private.h  xz_stream.h
feature/aliuhook/src/main/cpp/xz/userspace/: xz_config.h  xzminidec.c
git-api/: build.gradle.kts
google-java-format/: build.gradle  build.gradle.kts
(+7245 files in other folders)
